finalise api documentation
